src/html/popup.css
/* ... */
.cornerLogo {
    position: absolute;
    width: 43px;
    height: 43px;
    border-width: 2px 2px 0px 0px;
    border-color: white;
    border-style: solid;
    top: 109px;
    left: 5px;
    background-size: 43px 43px;
    background-color: #FAF9FA;
    opacity: 0.9;
}

.cornerLogo:hover {
    opacity: 1;
}

.cornerLogo:hover .tooltip {
    visibility: visible;
}

.cornerLogo .tooltip {
    top: 44px;
    left: 0px;
}

.cornerGame {
    position: absolute;
    width: 38px;
    height: 52px;
    border-width: 2px 0px 0px 2px;
    border-color: white;
    border-style: solid;
    top: 100px;
    left: 230px;
    background-size: 38px 52px;
    background-color: #FAF9FA;
    opacity: 0.9;
}

.cornerGame.channel {
    left: 139px;
    top: 125px;
}

.cornerGame:hover {
    cursor: pointer;
    opacity: 1;
}

.cornerGame:hover .tooltip {
    visibility: visible;
}

.cornerGame .tooltip {
    top: 53px;
    left: -100px;
}

.channelName {
    position: absolute;
    width: 162px;
    height: 20px;
    top: 3px;
    left: 6px;
    color: white;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: none;
    font-weight: bold;
    text-align: center;
}

.hideUntilHover {
    visibility: hidden;
    opacity: 0;
}

.contentBack:hover .hideUntilHover {
    visibility: visible;
    opacity: 1;
}

.status {
    position: absolute;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    word-wrap: break-word;
    -moz-user-select: text;
}

.status.stream {
    width: 190px;
    height: 16px;
    left: 2px;
    top: 2px;
    transition: all 0.3s ease;
}

.contentBack.stream:hover .status {
    height: 108px;
    white-space: inherit;
}

.status.channel {
    width: 126px;
    height: 0px;
    left: 6px;
    top: 18px;
    transition: height 0.3s ease;
}

.contentBack.channel:hover .status {
    height: 122px;
    white-space: inherit;
}

.topName {
    width: 162px;
    height: 18px;
    left: 6px;
    top: 2px;
    position: absolute;
    text-overflow: ellipsis;
    overflow: hidden;
    text-align: center;
}

.topName .tooltip {
    left: 11px;
    top: 15px;
}

.topName:hover {
    height: 174px;
}

.topName:hover .tooltip {
    visibility: visible;
}

.contentButton {
    position: relative;
    width: 30px;
    height: 30px;
    background-color: #6441A4;
}

.contentButton:hover {
    background-color: #7D5BBE;
    cursor: pointer;
}

.contentButton.noAccess {
    opacity: 0.5;
}

.contentButton.noAccess:hover {
    opacity: 1;
    cursor: not-allowed;
}

.contentButton.bottom.stream .tooltip {
    top: 31px;
    left: -45px;
}

.contentButton.bottom.follow.stream .tooltip {
    top: 31px;
    left: -75px;
}

.contentButton.bottom.unfollow.stream .tooltip {
    top: 31px;
    left: -75px;
}

.contentButton.bottom.game .tooltip {
    top: 31px;
    left: 0px;
}

.contentButton.bottom.channel .tooltip {
    top: 31px;
    left: -10px;
}

.contentButton.bottom.follow.channel .tooltip {
    left: -70px;
}

.contentButton.bottom.unfollow.channel .tooltip {
    left: -70px;
}

.contentButton.side .tooltip {
    top: 31px;
    left: -107px;
}

.contentButton:hover .tooltip {
    visibility: visible;
}

.contentButton.bottom {
    display: inline-block;
    float: left;
}

.contentButton.bottom.stream {
    top: 119px;
    left: 45px;
}

.contentButton.bottom.game {
    top: 153px;
}

.contentButton.bottom.channel {
    top: 144px;
    left: 14px;
}

.contentButton.side.stream {
    left: 235px;
    top: 35px;
}

.contentButton.side.game {
    left: 100px;
}

.contentButton.side.channel {
    top: 60px;
    left: 144px;
}

.contentButton.twitch {
    background-image: url(../assets/images/glitch.png);
}

.contentButton.popout {
    background-image: url(../assets/images/popout.png);
}

.contentButton.chat {
    background-image: url(../assets/images/chat.png);
}

.contentButton.enlarge {
    background-image: url(../assets/images/enlarge.png);
}

.contentButton.follow {
    background-image: url(../assets/images/follow.png);
}

.contentButton.unfollow {
    background-image: url(../assets/images/follow.png);
    background-color: #14B866;
}

.contentButton.unfollow:hover {
    background-image: url(../assets/images/unfollow.png);
    background-color: #E20303;
}

.contentButton.smallStreams {
    background-image: url(../assets/images/smallStreams.png);
}

.contentButton.smallVideos {
    background-image: url(../assets/images/smallVideos.png);
}

.contentButton.smallClips {
    background-image: url(../assets/images/smallClips.png);
}

.contentButton.hidden {
    visibility: hidden;
}

.tag {
    display: none;
}

.hide {
    display: none;
}

.user-select-all {
    -moz-user-select: all;
}
.text-center {
    text-align: center;
}

@keyframes rotate {
    from {
        transform: rotate(0deg);
    }
    to {
        transform: rotate(360deg);
    }
}

